# querymt-tui

./: Cargo.toml  LICENSE  README.md
.github/: renovate.json
.github/workflows/: ci.yml  nix.yml
src/: app.rs  config.rs  handlers.rs  highlight.rs  input.rs  main.rs  markdown.rs  protocol.rs  server_manager.rs  server_msg.rs  session.rs  theme.rs  themes_gen.rs  ui.rs
src/ui/: chat.rs  mod.rs  popups.rs  start.rs
