[package]
name = "querymt-tui"
description = "A Rust TUI frontend for QueryMT agent."
authors = [
    "Ivan Zatevakhin <ivan@query.mt>"
]
repository = "https://github.com/querymt/querymt-tui"
homepage = "https://query.mt"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "querymt-tui"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.29"
url = "2"
anyhow = "1"
pulldown-cmark = "0.13"
similar = "2"
fuzzy-matcher = "0.3"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
unicode-width = "0.2"
toml = "1"
dirs = "6"

[dev-dependencies]
serial_test = "3"
